--- a/maven_multi_module/pom.xml
+++ b/maven_multi_module/pom.xml
@@ -5,7 +5,7 @@
     <groupId>io.github.snyk</groupId>
     <artifactId>todolist-mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Todolist MVC parent module</name>
+    <name>Todolist MVC parent1 module</name>
     <description>A vulnerable demo application, initially based on Ben Hassine's TodoMVC.</description>
     <url>https://github.com/snyk/java-goof</url>
 
