--- a/node_package/package.json
+++ b/node_package/package.json
@@ -1,7 +1,7 @@
 {
     "name": "package-file-basic",
     "version": "1.0.0",
-    "description": "",
+    "description": "3",
     "main": "index.js",
     "author": "",
     "license": "ISC",
